--- a/Requirements.txt
+++ b/Requirements.txt
@@ -4,26 +4,8 @@ numpy==1.24.3
 scikit-learn==1.3.0
 flask==2.3.3
 
---------
 
-Explanation:
+###If you are using AWS CLI, boto3, or other cloud tools in Docker or asset scripts, also consider adding:
 
-streamlit: For the interactive web app frontend.
-
-pandas and numpy: For data handling and scientific computing.
-
-scikit-learn: For machine learning models and preprocessing pipelines.
-
-flask: Optional, in case you use the Flask API backend.
-
---------
-
-How to use requirements.txt:
-
-Save this content in a file named requirements.txt in your project root folder.
-
-Install all dependencies with:
-
-pip install -r requirements.txt
-
-This ensures your environment matches what your code needs to run smoothly.
+boto3>=1.28.0
+awscli>=1.29.0
